fix-top-menu-overlapping

--- a/src/components/Main/NavBar/NavBar.less
+++ b/src/components/Main/NavBar/NavBar.less
@@ -21,6 +21,11 @@
       width: 30px;
     }
   }
+  .top-menu-wrapper {
+    text-align: right;
+    // setting a height value can avoid overlapping with the betting drawer
+    height: 60px;
+  }
   .top-menu {
     background-color: @nav-bar-bg;
     line-height: inherit;
